[gd_scene load_steps=7 format=2]

[ext_resource path="res://artiphonie/learning/phonetic_demonstration/phonetic_demonstration.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/DejaVuSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/theme/transparent_panel_rounded_corner.tres" type="StyleBox" id=3]
[ext_resource path="res://art/imgBorel/an.png" type="Texture" id=4]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="phonetic_demonstration" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="background"]
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.12
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="background"]
anchor_left = 0.02
anchor_top = 0.15
anchor_right = 0.45
anchor_bottom = 0.85
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="video_frame" type="Panel" parent="background"]
anchor_left = 0.55
anchor_top = 0.15
anchor_right = 0.98
anchor_bottom = 0.85
margin_right = -0.319946
margin_bottom = -0.599976
rect_min_size = Vector2( 440, 453 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="video" type="VideoPlayer" parent="background/video_frame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.05176e-05
rect_min_size = Vector2( 440, 453 )
autoplay = true
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="background/video_frame"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="done" type="Button" parent="background"]
anchor_left = 0.4
anchor_top = 0.88
anchor_right = 0.6
anchor_bottom = 0.96
text = "Ok"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="background/video_frame/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="background/done" to="." method="_on_done_pressed"]
